# sovdev-logger

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.claude/: settings.local.json
.claude/skills/: README.md  _SHARED.md
.devcontainer/: Dockerfile.base  dev-setup.sh  devcontainer.json
.devcontainer/additions/: core-install-extensions.sh  install-ai-opencode.sh  install-dev-csharp.sh  install-dev-golang.sh  install-dev-java.sh  install-dev-php-laravel.sh  install-dev-php.sh  install-dev-python.sh  install-dev-rust.sh  install-dev-typescript.sh  install-kubectl.sh
.devcontainer/setup/: setup-mac.md
.github/workflows/: ci.yml
.terchris/: rules-environment.md  rules-monitoring-howto.md  rules-terchris.md
docs/: README-configuration.md  README-loggeloven.md  README-logging-concepts.md  README-microsoft-opentelemetry.md  README-observability-architecture.md  logging-data.md
go/: build-sovdevlogger.sh  go.sum
go/src/: logger.go
python/: .flake8  Makefile  README.md  build-sovdevlogger.sh  pyproject.toml  requirements.txt  test-verification.py
python-old-delete/: .gitignore  CHANGELOG.md  VERIFICATION_REPORT.md  VERIFICATION_SUMMARY.md
python-old-delete/test/: conftest.py
python/examples/: README.md
python/llm-work/: FINAL_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  ISSUES_AND_FIXES.md  llm-checklist-python.md  otel-sdk-comparison.md
python/src/: __init__.py  log_levels.py  logger.py
python/src/sovdev_logger/: __init__.py  file_handler.py  peer_services.py
python/test/e2e/company-lookup/: company-lookup.py  requirements.txt  run-test.sh
python/test/integration/: __init__.py  test_basic_logging.py  test_console_logging.py
python/test/unit/: test_initialization.py  test_log_levels.py  test_peer_services.py
specification/: 00-design-principles.md  01-api-contract.md  02-field-definitions.md  03-implementation-patterns.md  04-error-handling.md  04-implementation-patterns.md  05-environment-configuration.md  06-test-scenarios.md  07-anti-patterns.md  08-anti-patterns.md  08-testprogram-company-lookup.md  09-development-loop.md  09-testprogram-company-lookup.md  10-development-loop.md  10-otel-sdk.md  11-llm-checklist-template.md  11-otel-sdk.md  12-code-quality.md  12-llm-checklist-template.md  13-logging-concepts.md  README.md
specification/archive/: plan-specification.md
specification/schemas/: README.md  log-entry-schema.json  loki-response-schema.json  prometheus-response-schema.json  tempo-response-schema.json
specification/templates/: README.md  implementation-plan-template.md  verification-plan-template.md  verification-summary-template.md
specification/tests/: README-validators.md  README.md  VALIDATION-WORKFLOW.md  validate-log-consistency.py  validate-log-format.py  validate-loki-response.py  validate-metrics-consistency.py  validate-prometheus-response.py  validate-tempo-response.py  validate-trace-consistency.py
specification/tools/: DELETED-run-company-lookup-validate.sh  DELETED-run-full-validation-host.sh  GRAFANA-MANUAL-TESTING.md  README.md  in-devcontainer.sh  query-grafana-loki.sh  query-grafana-prometheus.sh  query-grafana-tempo.sh  query-grafana.sh  query-loki.sh  query-prometheus.sh  query-tempo.sh  run-company-lookup-validate.sh  run-company-lookup.sh  run-full-validation.sh  run-grafana-validation.sh  validate-log-format.sh  (+1 more)
todo-lib/: QUICK-START.md  README.md  REORGANIZATION-PROPOSAL.md  python-implementation-guide.md  python-otel-research.md  python-specification-gaps.md
typescript/: .env.example  .eslintrc.json  .gitignore  .npmignore  CHANGELOG.md  DEVCONTAINER-TESTING.md  Makefile  README.md  build-sovdevlogger.sh  package-lock.json  package.json  test-devcontainer.ts  tsconfig.json
(+88 files in other folders)
