[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovdev-logger"
version = "1.0.0"
authors = [
    {name = "Terje Christensen", email = "integration-platform@redcross.no"},
]
description = "Structured logging library for OpenTelemetry with Norwegian Red Cross standards"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["logging", "structured-logging", "opentelemetry", "otlp", "observability", "loki", "grafana"]
dependencies = [
    "structlog>=24.0.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-http>=1.28.0",
    "opentelemetry-semantic-conventions>=0.49b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-watch>=4.2.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "flake8>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/norwegianredcross/sovdev-logger"
"Bug Tracker" = "https://github.com/norwegianredcross/sovdev-logger/issues"
Documentation = "https://github.com/norwegianredcross/sovdev-logger#readme"
"Source Code" = "https://github.com/norwegianredcross/sovdev-logger/tree/main/python"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=sovdev_logger",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests (requires Kubernetes)",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
